fix the bug about phongap build webkit-appearance no drop down arrow for select tag by removing backgroud and border css style for select tag in bootstrap

--- a/app/css/login.css
+++ b/app/css/login.css
@@ -32,6 +32,14 @@
 
 #feideDomainPciker{
 	width: 30%;
+	display:inline-block;
+	height:20px;
+	padding:0px 6px;
+	margin-bottom:10px;
+	font-size:14px;
+	line-height:16px;
+	color:#555555;
+	vertical-align:middle;
 }
 
 #feideDomainDiv{
